[package]
name = "lightning-c-bindings"
version = "0.0.1"
authors = ["Matt Corallo"]
license = "Apache-2.0"
edition = "2018"
description = """
Utilities to fetch the chain from Bitcoin Core REST/RPC Interfaces and feed them into Rust Lightning.
"""

[lib]
name = "ldk"
crate-type = ["staticlib"
# Note that the following line is matched exactly by genbindings to turn off dylib creation
,"cdylib"]

[dependencies]
bitcoin = "0.27"
secp256k1 = { version = "0.20.3", features = ["global-context-less-secure"] }
# Note that the following line is matched by genbindings to update the path
lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "80ea2e51cdd3decf084574dee365065d782f7e8c", features = ["std"] }
lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "80ea2e51cdd3decf084574dee365065d782f7e8c" }
lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "80ea2e51cdd3decf084574dee365065d782f7e8c" }
lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "80ea2e51cdd3decf084574dee365065d782f7e8c" }

# Always force panic=abort, further options are set in the genbindings.sh build script
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
