[package]
name = "lightning-c-bindings"
version = "0.0.1"
authors = ["Matt Corallo"]
license = "Apache-2.0"
edition = "2018"
description = """
Utilities to fetch the chain from Bitcoin Core REST/RPC Interfaces and feed them into Rust Lightning.
"""

[lib]
name = "ldk"
crate-type = ["staticlib"
# Note that the following line is matched exactly by genbindings to turn off dylib creation
,"cdylib"]

[features]
no-std = ["bitcoin/no-std", "lightning/no-std", "lightning-invoice/no-std", "lightning-background-processor/no-std", "core2"]
std = ["bitcoin/std", "lightning/std", "lightning-invoice/std", "lightning-background-processor/std"]

[dependencies]
bitcoin = { version = "0.30", default-features = false }
secp256k1 = { version = "0.27", features = ["global-context", "recovery"] }
# Note that the following line is matched by genbindings to update the path
lightning = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "0.0.118-bindings", default-features = false }
lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "0.0.118-bindings", default-features = false }
lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "0.0.118-bindings", default-features = false }
lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "0.0.118-bindings", default-features = false }
lightning-rapid-gossip-sync = { git = "https://github.com/lightningdevkit/rust-lightning", branch = "0.0.118-bindings", default-features = false }

core2 = { version = "0.3.0", optional = true, default-features = false }

# Always force panic=abort, further options are set in the genbindings.sh build script
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
